--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,7 @@
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
-      "schematics": {},
+      "schematics": { "@schematics/angular:component": {"styleext": "scss"}},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -23,7 +23,11 @@
               "src/assets"
             ],
             "styles": [
+              
+              "node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss",
+              "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.css"
+              
             ],
             "scripts": []
           },
