--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-flexslider": "^1.3.2",
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "font-awesome": "^4.7.0",
+    "ng-simple-slideshow": "^1.2.9",
+    "promise-polyfill": "^8.1.3",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
