--- a/angular.json
+++ b/angular.json
@@ -23,13 +23,13 @@
               "src/assets"
             ],
             "styles": [
-              
+              "src/styles.css",              
               "node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "src/styles.css"
+              "node_modules/swiper/dist/css/swiper.min.css"
               
             ],
-            "scripts": []
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
           "configurations": {
             "production": {
