--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "angular-flexslider": "^1.3.2",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ng-simple-slideshow": "^1.2.9",
+    "ngx-swiper-wrapper": "^8.0.2",
     "promise-polyfill": "^8.1.3",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
