--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
               "src/styles.css",              
               "node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/swiper/dist/css/swiper.min.css"
+              "node_modules/swiper/dist/css/swiper.min.css",
+              "node_modules/ngx-toastr/toastr.css"
               
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"]
