--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.1.10",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "ng-simple-slideshow": "^1.2.9",
     "ngx-swiper-wrapper": "^8.0.2",
+    "ngx-toastr": "^10.1.0",
     "promise-polyfill": "^8.1.3",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
